--- a/views/accounts/login.handlebars
+++ b/views/accounts/login.handlebars
@@ -3,18 +3,18 @@
         <h2><i class="fa fa-sign-in"></i> Login Page</h2>
 
         {{#if message}} 
-            <h2 class="alert alert-danger">{{message}}</h2>
+            <h4 class="alert alert-danger">{{message}}</h4>
         {{/if}}
 
         <form action='/login' method='POST'>
             <div class="form-group">
                 <label for="inputEmail">Email Address</label>
-                <input type="email" class="form-control" id="inputEmail" aria-describedby="inputEmailDesc" placeholder="Enter Email">
+                <input type="email" class="form-control" name="inputEmail" id="inputEmail" aria-describedby="inputEmailDesc" placeholder="Enter Email">
                 <small id="inputEmailDesc" class="form-text text-muted">Enter the Email you used to sign up.</small>
             </div>
             <div class="form-group">
                 <label for="inputPassword">Password</label>
-                <input type="password" class="form-control" id="inputPassword">
+                <input type="password" class="form-control" name="inputPassword" id="inputPassword">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
