--- a/views/accounts/signup.handlebars
+++ b/views/accounts/signup.handlebars
@@ -1,22 +1,29 @@
 <div class="container">
+
+    {{#if message}} 
+        <h2 class="alert alert-danger">{{message}}</h2>
+    {{/if}}
     <div class="col-md-5 login-page">
         <h2><i class="fa fa-sign-in"></i> Sign Up!</h2>
-
-        {{#if message}} 
-            <h2 class="alert alert-danger">{{message}}</h2>
-        {{/if}}
-
-        <form action='/signup' method='POST'>
+        
+        <form id="signup" action='/signup' method='POST'>
             <div class="form-group">
-                <label for="inputEmail">Email Address</label>
-                <input type="email" class="form-control" id="inputEmail" aria-describedby="inputEmailDesc" placeholder="Enter Email">
-                <small id="inputEmailDesc" class="form-text text-muted">Enter the Email you used to sign up.</small>
+                <label for="email">Email Address</label>
+                <input class="form-control" name="email" type="email" />
             </div>
             <div class="form-group">
-                <label for="inputPassword">Password</label>
-                <input type="password" class="form-control" id="inputPassword">
+                <label for="password">Password</label>
+                <input name="password" type="password" class="form-control" />
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <div class="form-group">
+                <label for="firstname">Firstname</label>
+                <input name="firstname" type="text" class="form-control" />
+            </div>
+            <div class='form-group'>
+                <label for="lastname">Lastname</label>
+                <input name="lastname" type="text" class="form-control" />
+            </div>
+            <button type="submit" class="btn btn-primary">Sign up!</button>
         </form>
     </div>
 </div>
